# life2Notion

./: DESCRIPTION.md  DESIGN.md  META.md  README.md  REGULATION.md  pyproject.toml
src/world2notion/: __init__.py
